--- a/API/API.csproj
+++ b/API/API.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Controllers\AssetSettingController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\AssetLibraryController.cs" />
+    <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Controllers\WidgetController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\UserController.cs" />
