--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Country.cs" />
     <Compile Include="Enum\Activity.cs" />
     <Compile Include="Enum\ClaimType.cs" />
+    <Compile Include="Enum\StatemnetStatus.cs" />
     <Compile Include="Enum\PageStatus.cs" />
     <Compile Include="Enum\SearchMode.cs" />
     <Compile Include="Enum\SortOrder.cs" />
@@ -71,11 +72,14 @@
     <Compile Include="Schedule.cs" />
     <Compile Include="Search Parameter\AssetLibrarySearchParameter.cs" />
     <Compile Include="Search Parameter\AssetSearchParameter.cs" />
+    <Compile Include="Search Parameter\StatementSearchParameter.cs" />
     <Compile Include="Search Parameter\PageSearchParameter.cs" />
     <Compile Include="Search Parameter\SchdeuleSearchParameter.cs" />
     <Compile Include="Search Parameter\WidgetSearchParameter.cs" />
     <Compile Include="Search Parameter\RoleSearchParameter.cs" />
     <Compile Include="Search Parameter\UserSearchParameter.cs" />
+    <Compile Include="Statement.cs" />
+    <Compile Include="StatementPage.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserLogin.cs" />
     <Compile Include="UserLoginActivityHistory.cs" />
