Max request length issue resolved

--- a/API/Web.config
+++ b/API/Web.config
@@ -54,7 +54,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="15728640" />
   </system.web>
 
   <runtime>
@@ -134,9 +134,14 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
-    </staticContent>
+    </staticContent>-->
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="15728640"  />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
