--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ConnectionStringNotFoundException.cs" />
     <Compile Include="Constants\AssetLibrary.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
+    <Compile Include="Constants\RenderEngineConstant.cs" />
     <Compile Include="Constants\StatementConstant.cs" />
     <Compile Include="Constants\PageConstant.cs" />
     <Compile Include="Constants\ScheduleConstant.cs" />
@@ -66,6 +67,9 @@
     <Compile Include="InvalidSearchParameterException.cs" />
     <Compile Include="InvalidTenantException.cs" />
     <Compile Include="NullArgumentException.cs" />
+    <Compile Include="Render Engine\DuplicateRenderEngineFoundException.cs" />
+    <Compile Include="Render Engine\InvalidRenderEngineException.cs" />
+    <Compile Include="Render Engine\RenderEngineNotFoundException.cs" />
     <Compile Include="Schedule\RunningScheduleRefrenceException.cs" />
     <Compile Include="Statement\DuplicateStatementPageFoundException.cs" />
     <Compile Include="Statement\DuplicateStatementFoundException.cs" />
