--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AssetSettingManager.cs" />
     <Compile Include="AssetLibraryManager.cs" />
     <Compile Include="AuthenticationManager.cs" />
+    <Compile Include="RenderEngineManager.cs" />
     <Compile Include="StatementManager.cs" />
     <Compile Include="PageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
