--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Common\HtmlConstants.cs" />
     <Compile Include="Common\ModelConstant.cs" />
     <Compile Include="Common\PagingParameter.cs" />
+    <Compile Include="Common\RenderEngineConstant.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="CustomerInformation.cs" />
     <Compile Include="Enum\Activity.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="PageWidget.cs" />
     <Compile Include="ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderEngine.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="RolePrivilege.cs" />
     <Compile Include="RolePrivilegeOperation.cs" />
@@ -77,6 +79,7 @@
     <Compile Include="ScheduleRunHistory.cs" />
     <Compile Include="Search Parameter\AssetLibrarySearchParameter.cs" />
     <Compile Include="Search Parameter\AssetSearchParameter.cs" />
+    <Compile Include="Search Parameter\RenderEngineSearchParameter.cs" />
     <Compile Include="Search Parameter\StatementSearchParameter.cs" />
     <Compile Include="Search Parameter\PageSearchParameter.cs" />
     <Compile Include="Search Parameter\SchdeuleSearchParameter.cs" />
