--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -94,14 +94,24 @@
     <Compile Include="CountryRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="CustomerInfoRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ImageRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="IRepository\IAssetSettingRepository.cs" />
     <Compile Include="IRepository\IAssetLibraryRepository.cs" />
+    <Compile Include="IRepository\IRenderEngineRepository.cs" />
     <Compile Include="IRepository\IStatementRepository.cs" />
     <Compile Include="IRepository\IPageRepository.cs" />
     <Compile Include="IRepository\IScheduleRepository.cs" />
     <Compile Include="IRepository\IWidgetRepository.cs" />
     <Compile Include="IRepository\IRoleRepository.cs" />
     <Compile Include="IRepository\IUserRepository.cs" />
+    <Compile Include="NewsAlertRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="NISDataContext.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -127,6 +137,9 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderEngineRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="RolePrivilegeRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
@@ -142,6 +155,7 @@
     <Compile Include="SQLRepository\SQLAssetSettingRepository.cs" />
     <Compile Include="SQLRepository\SQLAssetLibraryRepository.cs" />
     <Compile Include="SQLRepository\SQLAzureUserRepository.cs" />
+    <Compile Include="SQLRepository\SQLRenderEngineRepository.cs" />
     <Compile Include="SQLRepository\SQLStatementRepository.cs" />
     <Compile Include="SQLRepository\SQLPageRepository.cs" />
     <Compile Include="SQLRepository\SQLAzureWidgetRepository.cs" />
@@ -159,6 +173,9 @@
     <Compile Include="TenantRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="TransactionDetailRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="UserCredentialHistoryRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
@@ -172,6 +189,9 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="UserRoleMapRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VideoRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="WidgetRecord.cs">
