--- a/API/API.csproj
+++ b/API/API.csproj
@@ -234,6 +234,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Resources\absa-logo.png" />
+    <Content Include="Resources\script.js" />
+    <Content Include="Resources\site.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
