--- a/API/packages.config
+++ b/API/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
