User activation on conform pwd done

--- a/API/Web.config
+++ b/API/Web.config
@@ -34,7 +34,7 @@
 
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
-    <add key="ChangePasswordLink" value="https://nisqa-api.azurewebsites.net/confirmuser?token=" />
+    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
 
     <!-- for QA Server -->
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>-->
@@ -134,10 +134,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <!--<staticContent>
+
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
-    </staticContent>-->
-    
+    </staticContent>
+
     <security>
       <requestFiltering>
         <requestLimits maxAllowedContentLength="15728640" />
