table schema added which requires for html statement generation process

--- a/API/Web.config
+++ b/API/Web.config
@@ -135,9 +135,9 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
-    </staticContent>
+    </staticContent>-->
 
     <security>
       <requestFiltering>
