Schedule log list and schedule log details list api added.

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -263,6 +263,7 @@
     <Compile Include="OwinStartup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="ScheduleLogController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="libman.json" />
