--- a/API/API.csproj
+++ b/API/API.csproj
@@ -234,9 +234,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Resources\absa-logo.png" />
-    <Content Include="Resources\script.js" />
-    <Content Include="Resources\site.css" />
+    <Content Include="Resources\css\bootstrap.min.css" />
+    <Content Include="Resources\css\font-awesome.min.css" />
+    <Content Include="Resources\images\absa-logo.png" />
+    <Content Include="Resources\js\accessibility.js" />
+    <Content Include="Resources\js\bootstrap.min.js" />
+    <Content Include="Resources\js\export-data.js" />
+    <Content Include="Resources\js\exporting.js" />
+    <Content Include="Resources\js\highcharts.js" />
+    <Content Include="Resources\js\jquery.min.js" />
+    <Content Include="Resources\js\popper.min.js" />
+    <Content Include="Resources\js\script.js" />
+    <Content Include="Resources\css\site.css" />
+    <Content Include="Resources\js\series-label.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -249,6 +259,7 @@
     <Compile Include="Container\UnityResolverService.cs" />
     <Compile Include="Controllers\AssetSettingController.cs" />
     <Compile Include="Controllers\RenderEngineController.cs" />
+    <Compile Include="Controllers\ScheduleLogsController.cs" />
     <Compile Include="Controllers\StatementController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\AssetLibraryController.cs" />
@@ -263,7 +274,6 @@
     <Compile Include="OwinStartup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
-    <Compile Include="ScheduleLogController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="libman.json" />
