--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountInformation.cs" />
+    <Compile Include="AccountMaster.cs" />
     <Compile Include="AccountSummary.cs" />
+    <Compile Include="AccountTransaction.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="AssetLibrary.cs" />
     <Compile Include="AssetPathSetting.cs" />
@@ -69,10 +71,12 @@
     <Compile Include="Enum\SearchMode.cs" />
     <Compile Include="Enum\SortOrder.cs" />
     <Compile Include="Common\SortParameter.cs" />
+    <Compile Include="IncomeSources.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
     <Compile Include="ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReminderAndRecommendation.cs" />
     <Compile Include="RenderEngine.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="RolePrivilege.cs" />
