statement generation related changes.

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Search Parameter\UserSearchParameter.cs" />
     <Compile Include="Statement.cs" />
     <Compile Include="StatementPage.cs" />
+    <Compile Include="StatementPageContent.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserLogin.cs" />
     <Compile Include="UserLoginActivityHistory.cs" />
