--- a/API/Web.config
+++ b/API/Web.config
@@ -137,6 +137,7 @@
 
     <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
     </staticContent>-->
 
     <security>
