--- a/API/API.csproj
+++ b/API/API.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Container\Container.cs" />
     <Compile Include="Container\IocContainer.cs" />
     <Compile Include="Container\UnityResolverService.cs" />
+    <Compile Include="Controllers\TenantConfigurationController.cs" />
     <Compile Include="Controllers\AssetSettingController.cs" />
     <Compile Include="Controllers\RenderEngineController.cs" />
     <Compile Include="Controllers\ScheduleLogsController.cs" />
