spending n saving trend chart widget related changes

--- a/API/Web.config
+++ b/API/Web.config
@@ -138,7 +138,7 @@
     <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
