table schema related changes.. and post deployment script added in store project

--- a/API/Web.config
+++ b/API/Web.config
@@ -14,7 +14,7 @@
     <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
     <!-- for PRD Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=NVIDYO-DEV;Initial Catalog=nvidyo;User ID=sa;Password=n4mat1ve#" />-->
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
   </connectionStrings>
   <appSettings>
 
@@ -34,17 +34,17 @@
 
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
-    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />-->
 
     <!-- for QA Server -->
-    <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>-->
+    <add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>
 
     <!--Teanant setup  -->
     <!-- for QA Server -->
     <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
     <!-- for PRD Server -->
-    <!--<add key="TenantSQLStorageAccount" value="Data Source=NVIDYO-DEV;Initial Catalog=nvidyo;User ID=sa;Password=n4mat1ve#" />-->
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
     <!--NodeJS-->
     <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
