--- a/StatementGeneratorService/app.config
+++ b/StatementGeneratorService/app.config
@@ -9,6 +9,7 @@
   <appSettings>
     <!--<add key="ApiBaseAddress" value="http://localhost/API/"/>-->
     <add key="ApiBaseAddress" value="http://nisqa-api.azurewebsites.net/"/>
+  <!--<add key="ApiBaseAddress" value="https://nis-app.azurewebsites.net/"/>-->
   </appSettings>
     <startup>
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
