--- a/API/API.csproj
+++ b/API/API.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Container\Container.cs" />
     <Compile Include="Container\IocContainer.cs" />
     <Compile Include="Container\UnityResolverService.cs" />
+    <Compile Include="Controllers\StatementStatementController.cs" />
     <Compile Include="Controllers\TenantConfigurationController.cs" />
     <Compile Include="Controllers\AssetSettingController.cs" />
     <Compile Include="Controllers\RenderEngineController.cs" />
