--- a/App/App.csproj
+++ b/App/App.csproj
@@ -37,6 +37,7 @@
     <None Remove="ClientApp\src\app\layout\schedule-management\schedule.ts" />
     <None Remove="ClientApp\src\app\layout\schedule-management\scheduleHitory.ts" />
     <None Remove="ClientApp\src\app\layout\statement-defination\statement.ts" />
+    <None Remove="ClientApp\src\app\layout\statement-search\statementSearch.ts" />
     <None Remove="ClientApp\src\app\layout\tenant-configuration\tenantConfiguration.service.ts" />
     <None Remove="ClientApp\src\app\layout\tenant-configuration\tenatConfiguration.ts" />
     <None Remove="ClientApp\src\app\layout\users\user.ts" />
@@ -59,6 +60,7 @@
     <TypeScriptCompile Remove="ClientApp\src\app\layout\roles\role.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\schedule-management\schedule.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\statement-defination\statement.service.ts" />
+    <TypeScriptCompile Remove="ClientApp\src\app\layout\statement-search\statementSearch.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\users\user.service.spec.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\users\user.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\login\login.service.ts" />
@@ -100,6 +102,9 @@
       <SubType>Code</SubType>
     </TypeScriptCompile>
     <TypeScriptCompile Update="ClientApp\src\app\layout\statement-defination\statement.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Update="ClientApp\src\app\layout\statement-search\statementSearch.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
     <TypeScriptCompile Update="ClientApp\src\app\layout\widgets\widget.service.ts">
