download error log in excel api added as well as bind with Ui on schedule log list screen.

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ScheduleLog.cs" />
     <Compile Include="ScheduleLogDetail.cs" />
     <Compile Include="ScheduleLogDetailSearchParameter.cs" />
+    <Compile Include="ScheduleLogErrorDetail.cs" />
     <Compile Include="ScheduleRunHistory.cs" />
     <Compile Include="Search Parameter\AssetLibrarySearchParameter.cs" />
     <Compile Include="Search Parameter\AssetSearchParameter.cs" />
