--- a/API/Web.config
+++ b/API/Web.config
@@ -38,10 +38,10 @@
 
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
-    <!--<add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
 
     <!-- for QA Server -->
-    <add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
 
     <!--Teanant setup  -->
     
@@ -143,10 +143,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
