--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Country.cs" />
     <Compile Include="CustomerInformation.cs" />
     <Compile Include="Enum\Activity.cs" />
+    <Compile Include="Enum\BatchStatus.cs" />
     <Compile Include="Enum\ClaimType.cs" />
     <Compile Include="Enum\ScheduleLogStatus.cs" />
     <Compile Include="Enum\ScheduleStatus.cs" />
